--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 <body>
     <header>
         <div class="row">
-            <div class="col-6 col-md-6 padding-none">
-                <img class="img-fluid" src="./assets/cabecera-foto copia.jpg" alt="">
+            <div class="col col-md-6 padding-none ">
+                <img class="img-fluid " src="./assets/cabecera-foto copia.jpg" alt="">
             </div>
-            <div class="col-6 col-md-6 padding-none">
+            <div class="col col-md-6 padding-none prueba">
                 <img class="img-fluid" src="./assets/cabecera-texto.jpg" alt="">
             </div>
         </div>
+
 
         <div class="row">
             <nav class="navbar justify-content-center nav-items-container">
@@ -171,7 +172,7 @@
                 <div class="col-5 div-html" id="div-html">
                     <ul class="skill-ul" id="skill">
                         <li><span class="bar html"></span>
-                            <h4>HTML <span class="skill-span-progress"> -in progress-</span>
+                            <h4>HTML<span class="skill-span-progress">-working-</span>
                             </h4>
                         </li>
                     </ul>
@@ -190,7 +191,7 @@
                 <div class="col-5 div-css" id="div-css">
                     <ul class="skill-ul" id="skill">
                         <li><span class="bar css"></span>
-                            <h4>CSS <span class="skill-span-progress"> -in progress-</span></h4>
+                            <h4>CSS<span class="skill-span-progress">-working-</span></h4>
                         </li>
                     </ul>
                 </div>
@@ -206,7 +207,7 @@
                 <div class="col-5 div-js" id="div-js">
                     <ul class="skill-ul" id="skill">
                         <li><span class="bar js"></span>
-                            <h4>JavaScript <span class="skill-span-progress"> -in progress-</span></h4>
+                            <h4>JavaScript<span class="skill-span-progress">-working-</span></h4>
                         </li>
                     </ul>
                 </div>
@@ -254,7 +255,7 @@
                 <div class="col-5 div-git" id="div-git">
                     <ul class="skill-ul" id="skill">
                         <li><span class="bar git"></span>
-                            <h4>Git <span class="skill-span-progress"> -in progress-</span></h4>
+                            <h4>Git<span class="skill-span-progress">-working-</span></h4>
                         </li>
                     </ul>
                 </div>
@@ -329,8 +330,7 @@
         <div class="footer-container">
 
             <div class="container-copyright">
-                <span>2023 | Created by Sandri <i class="fa-solid fa-heart" id="icon-heart"></i> Todos los Derechos
-                    Reservados</span>
+                <span>2023 | Created by Sandri <i class="fa-solid fa-heart" id="icon-heart"></i></span>
             </div>
         </div>
     </footer>
